namespace course_project.Models;

public class BestSellingProductInfo
{
    public string ProductName { get; set; }
    public string ProductArticle { get; set; }
    public int TotalQuantitySold { get; set; }
    public decimal TotalRevenueFromProduct { get; set; }
}