namespace course_project.Models;

public class SaleItem
{
    public int ProductId { get; set; }
    public int Quantity { get; set; }
    public decimal PriceAtTimeOfSale { get; set; }
}