using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace course_project.Models
{
    public class User
    {
        public string UserName { get; set; }
        public string HashedPassword { get; set; }
    }
}
